Added Date Filltering and Download button to pull reports for Visit Requests.

--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -203,7 +203,7 @@
 									the case of KRA to:
 								</p>
 								<p>
-									Attn: <strong style="text-decoration:underline">{{ visit_data.full_name }} </strong>
+									Name: <strong style="text-decoration:underline">{{ visit_data.full_name }} </strong>
 								</p>
 								<p>
 									Email: <strong style="text-decoration:underline">{{ visit_data.email_address }}</strong>
